# the-ai-counsel

./: .dockerignore  .gitignore  AGENTS.md  Add-To-ClaudeDesktop.bat  CHANGELOG.md  CLAUDE.md  CONNECT-MCP.md  Dockerfile  Fix-ClaudeDesktop-stdio.bat  README.he.md  README.md  Start-AI-Counsel.bat  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  start.sh
backend/: __init__.py  advisor_prompts.py  advisors.py  config.py  costs.py  council.py  debate.py  json_repair.py  main.py  metadata_utils.py  model_preflight.py  ollama_client.py  openrouter.py  personas.py  prompts.py  search.py  settings.py  storage.py
backend/providers/: anthropic.py  base.py  custom_openai.py  deepseek.py  google.py  groq.py  mistral.py  nvidia.py  ollama.py  openai.py  opencode.py  openrouter.py
backend/tests/: conftest.py  test_advisor_presets.py  test_advisors_backend.py  test_costs.py  test_council_presets.py  test_debate.py  test_debate_integration.py  test_json_repair.py  test_main_preflight.py  test_metadata_utils.py  test_model_preflight.py  test_opencode_provider.py  test_personas.py  test_ranking_parse.py  test_run_summary.py  test_settings_backup.py
docs/: COUNCIL-DEBATE-CONFIG.md  DOC-SYNC.md  DOCKER.md  QUICKSTART.md
docs/mcp/: CHOOSING-TRANSPORT.md  EXAMPLES.md  INSTRUCTIONS.md  README.md  SETUP-LOCAL.md  SETUP-REMOTE.md  TOOLS.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: config.js
frontend/src/: App.css  App.jsx  api.js  (+5 more)
the_ai_counsel_mcp/: __init__.py  __main__.py  client.py  errors.py  presets.py  server.py  stream_buffer.py
(+83 files in other folders)
