[project]
name = "the-ai-counsel"
version = "0.9.0+he.1"
description = "The AI Counsel - Collective AI Intelligence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "ddgs>=8.0.0",
    "yake>=0.4.8",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
the-ai-counsel-mcp = "the_ai_counsel_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
